# psm

./: .gitignore  pyproject.toml  train_wav2vec.py  vocab.json
notebooks/: arpabet.ipynb  asr_demo.ipynb  tmit_dataset.ipynb  vocab.json  wav2vec_finetuning.ipynb
web/: ui.py
web/flagged/: log.csv
