[tool.poetry]
name = "psm"
version = "0.1.0"
description = ""
authors = ["Rostislav Grigorev <grigorjew.rostislaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.6.1"
soundfile = "^0.11.0"
librosa = "^0.9.2"
torch = {version = "^1.12.1+cu116", source = "torch"}
lightning-flash = {extras = ["audio"], version = "^0.8.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"
ipywidgets = ">=7.0,<8.0"
mypy = "^0.982"
black = "^22.10.0"


[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
gradio = "^3.6"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
